@@ -51,6 +51,7 @@ private:
   int64_t m_previous_cluster_tc, m_num_cue_elements, m_header_overhead;
   int64_t m_timecode_offset;
   int64_t m_bytes_in_file, m_first_timecode_in_file, m_first_timecode_in_part, m_first_discarded_timecode, m_last_discarded_timecode_and_duration, m_discarded_duration, m_previous_discarded_duration;
+  timecode_c m_min_timecode_in_file;
   int64_t m_max_timecode_in_file, m_min_timecode_in_cluster, m_max_timecode_in_cluster, m_frame_field_number;
   bool m_first_video_keyframe_seen;
   mm_io_c *m_out;
